--- a/frontendFinderAltProject/vercel.json
+++ b/frontendFinderAltProject/vercel.json
@@ -1,5 +1,15 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/dist/frontend-finder-alt-project/index.html"
+    }
   ]
 }
